--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
   </head>
 
   <body>
+    <% flash.each do |key, value| %>
+      <%= value %>
+    <% end %>
+    
     <%= yield %>
   </body>
 </html>
