changed spec for new user model

--- a/app/views/art_labels/show.html.erb
+++ b/app/views/art_labels/show.html.erb
@@ -3,4 +3,4 @@
 Brewery: <%= @art_label.brewery %><br>
 Beer Description: <%= @art_label.beer_description %><br>
 Image: <%= @art_label.image_url %><br>
-Submitted by: <%= @art_label.user.name %><br>
+Submitted by: <%= @art_label.user.username %><br>
