--- a/app/views/art_labels/index.html.erb
+++ b/app/views/art_labels/index.html.erb
@@ -4,6 +4,9 @@
   <% @art_labels.each do |label| %>
     <li> Name: <%= label.name %><br>
     Brewery: <%= label.brewery %></li>
+    <% if current_user && current_user.admin? %>
+     <%= button_to 'Delete', label, method: :delete %>
+   <% end %>
   <% end %>
 </ul>
 
