--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,12 @@
   </head>
 
   <body>
-
-    <% flash.each do |key, value| %>
-      <%= value %>
-    <% end %>
-
-
     <nav>
       <%- if user_signed_in? -%>
         <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+        <% if current_user.admin? %>
+          <li><%= link_to "Admin Section", admin_path %></li>
+        <% end %>
         <%- if !current_page?(edit_user_registration_path) -%>
           <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
         <%- end -%>
