--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -4,7 +4,7 @@
   <% @users.each do |user| %>
     <li>
       <%= user.first_name %> <%= user.last_name %> - <%= user.username %>
-        <%= button_to "Delete #{user.username}?", user, method: :delete %> </li>
+        <%= button_to "Delete #{user.username}?", admin_user_path(user), method: :delete %> </li>
   <% end %>
 </ul>
 
