--- a/app/views/art_labels/show.html.erb
+++ b/app/views/art_labels/show.html.erb
@@ -3,7 +3,8 @@
 Brewery: <%= @art_label.brewery %><br>
 Beer Description: <%= @art_label.beer_description %><br>
 Image: <%= @art_label.image_url %><br>
-Submitted by: <%= @art_label.user.username %><br>
+
+Submitted by: <%= @creator %><br>
 
 <h3>Reviews:</h3>
 <ul>
