--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,20 +9,24 @@
   </head>
 
   <body>
-
-    <nav>
-      <%- if user_signed_in? -%>
-        <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
-        <% if current_user.admin? %>
-          <li><%= link_to "Admin Section", admin_users_path %></li>
-        <% end %>
-        <%- if !current_page?(edit_user_registration_path) -%>
-          <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
-        <%- end -%>
-      <%- else -%>
-        <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-        <li><%= link_to 'Sign In', new_user_session_path %></li>
-      <%- end -%>
+    <nav class="top-bar">
+        <div class='top-bar-title'>
+          BeerArtReviews
+        </div>
+        <ul class="top-bar-section">
+          <%- if user_signed_in? -%>
+            <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+            <% if current_user.admin? %>
+              <li><%= link_to "Admin Section", admin_users_path %></li>
+            <% end %>
+            <%- if !current_page?(edit_user_registration_path) -%>
+              <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+            <%- end -%>
+          <%- else -%>
+            <li><%= link_to 'Sign Up', new_user_registration_path %></li>
+            <li><%= link_to 'Sign In', new_user_session_path %></li>
+          <%- end -%>
+        </ul>
     </nav>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
