--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,8 +13,6 @@
  *= require_tree .
  *= require_self
  */
- @import url('https://fonts.googleapis.com/css?family=Forum');
- @import url('https://fonts.googleapis.com/css?family=Quicksand');
 
 body {
    background-image: url('/images/stardust.png');
@@ -63,7 +61,7 @@ a:visited {
 
 .top-bar-section {
   float: right;
-  display: inline-block;
+  display: block;
   margin: -5px;
 }
 
@@ -73,7 +71,7 @@ a:visited {
 }
 
 .top-bar-title {
-  display: inline-block;
+  display: block;
   float: left;
   margin-top: -15px;
   font-family: 'Quicksand', sans-serif;
