--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
           BeerArtReviews
         </div>
         <ul class="top-bar-section">
+          <li><%= link_to 'Home', art_labels_path %>
           <%- if user_signed_in? -%>
             <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
             <% if current_user.admin? %>
@@ -24,6 +25,7 @@
             <%- if !current_page?(edit_user_registration_path) -%>
               <li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
             <%- end -%>
+            <li><%= link_to 'Add a New Art Label', new_art_label_path %>
           <%- else -%>
             <li><%= link_to 'Sign Up', new_user_registration_path %></li>
             <li><%= link_to 'Sign In', new_user_session_path %></li>
