--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,68 @@
  *= require_tree .
  *= require_self
  */
+
+body {
+   background-image: url('/images/stardust.png');
+   /*color: #CCCCCC;*/
+   color: #FFFFFF;
+   /*background: #d0dcc4;*/
+   background: #ea5a64;
+   font-family: 'Forum', cursive;
+   font-size: 20px;
+   margin: 0 auto;
+ }
+a,
+a:visited {
+  color: #FFFFFF;
+  text-decoration: none;
+}
+ .tile {
+  background: #218396;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #29b2bd;
+  border-radius: 25px;
+  padding: 20px;
+  margin: 5px;
+}
+
+.tile:hover {
+  background: #3C3C3C;
+}
+
+.container {
+  background: #218396;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #29b2bd;
+  border-radius: 25px;
+  padding: 20px;
+  margin: 20px;
+}
+
+.top-bar {
+  background-color: #3C3C3C;
+  padding: 25px;
+  border-bottom: 2px #FFFFFF solid;
+}
+
+.top-bar-section {
+  float: right;
+  display: block;
+  margin: -5px;
+}
+
+.top-bar-section li {
+  display: inline-block;
+  margin-left: 1em;
+}
+
+.top-bar-title {
+  display: block;
+  float: left;
+  margin-top: -15px;
+  font-family: 'Quicksand', sans-serif;
+  font-weight: bold;
+  font-size: 30px;
+}
