--- a/app/views/art_labels/new.html.erb
+++ b/app/views/art_labels/new.html.erb
@@ -1,35 +1,33 @@
-<h1>New Art Label!</h1>
+<h1 class="center-text">New Art Label!</h1>
+<div class="container">
+  <%= image_tag(@art_label.label_photo, height: "200") %>
+  <%= form_for @art_label do |f| %>
 
-<%= image_tag(@art_label.label_photo, height: "200") %>
-<%= form_for @art_label do |f| %>
+    <%= f.label :name %>
+    <%= f.text_field :name %><br />
 
-  <%= f.label :name %>
-  <%= f.text_field :name %><br />
+    <%= f.label :label_photo, 'Art Label Photo' %>
+    <%= f.file_field :label_photo %><br />
 
-  <%= f.label :label_photo, 'Art Label Photo' %>
-  <%= f.file_field :label_photo %><br />
+    <%= f.label :brewery %>
+    <%= f.text_field :brewery %><br />
 
-  <%= f.label :brewery %>
-  <%= f.text_field :brewery %><br />
+    <%= f.label :beer_style %>
+    <%= f.text_field :beer_style %><br />
 
-  <%= f.label :beer_style %>
-  <%= f.text_field :beer_style %><br />
+    <%= f.label :art_style %>
+    <%= f.text_field :art_style %><br />
 
-  <%= f.label :art_style %>
-  <%= f.text_field :art_style %><br />
+    <%= f.label :container_type %>
+    <%= f.text_field :container_type %><br />
 
-  <%= f.label :container_type %>
-  <%= f.text_field :container_type %><br />
+    <%= f.label :beer_description %>
+    <%= f.text_field :beer_description %><br />
 
-  <%= f.label :beer_description %>
-  <%= f.text_field :beer_description %><br />
+    <%= f.label :art_description %>
+    <%= f.text_field :art_description %><br />
 
-  <%= f.label :art_description %>
-  <%= f.text_field :art_description %><br />
+    <%= f.submit "Add Art Label" %>
 
-  <%= f.label :beer_rating %>
-  <%= f.text_field :beer_rating %><br />
-
-  <%= f.submit "Add Art Label" %>
-
-<% end %>
+  <% end %>
+</div>
