--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,15 +14,26 @@
  *= require_self
  */
 
+ #grad {
+   background: red; /* For browsers that do not support gradients */
+   background: -webkit-linear-gradient(-90deg, red, yellow); /* For Safari 5.1 to 6.0 */
+   background: -o-linear-gradient(-90deg, red, yellow); /* For Opera 11.1 to 12.0 */
+   background: -moz-linear-gradient(-90deg, red, yellow); /* For Firefox 3.6 to 15 */
+   background: linear-gradient(-90deg, red, yellow); /* Standard syntax */
+ }
 body {
-   background-image: url('/images/stardust.png');
    /*color: #CCCCCC;*/
    color: #FFFFFF;
    /*background: #d0dcc4;*/
-   background: #ea5a64;
+   /*background: #ea5a64;*/
    font-family: 'Forum', cursive;
    font-size: 20px;
    margin: 0 auto;
+   background: #BF6824; /* For browsers that do not support gradients */
+   /*background: -webkit-linear-gradient(-90deg, #9a342d, #f4b218); /* For Safari 5.1 to 6.0 */*/
+   /*background: -o-linear-gradient(-90deg, #9a342d, #f4b218); /* For Opera 11.1 to 12.0 */*/
+   /*background: -moz-linear-gradient(-90deg, #9a342d, #f4b218); /* For Firefox 3.6 to 15 */*/
+   /*background: linear-gradient(-90deg, #9a342d, #f4b218); /* Standard syntax */*/
  }
 a,
 a:visited {
@@ -33,14 +44,14 @@ a:visited {
   display: inline-block;
   height: 400px;
   width: 400px;
-  background: #218396;
+  /*background: #218396;*/
+  background: #3C3C3C;
   border-width: 5px;
   border-style: solid;
-  border-color: #29b2bd;
+  border-color: #FFFFFF;
   border-radius: 25px;
   padding: 20px;
   margin: 25px;
-
 }
 
 .tile:hover {
@@ -48,16 +59,18 @@ a:visited {
 }
 
 .container {
-  background: #218396;
+  background: #9a342d;
+  /*background: #218396;*/
   border-width: 5px;
   border-style: solid;
-  border-color: #29b2bd;
+  border-color: #3C3C3C;
   border-radius: 25px;
   padding: 20px;
   margin: 20px;
 }
 
 .top-bar {
+  font-size: 18px;
   background-color: #3C3C3C;
   padding: 25px;
   border-bottom: 2px #FFFFFF solid;
@@ -104,6 +117,12 @@ a:visited {
   width: 400px;
 }
 
-.blackish-background {
-  background-color: #3C3C3C
+.button {
+  float: left;
+  background-color: grey;
+}
+
+.cursive {
+  font-family: 'Princess Sofia', cursive;
+  font-size: 24px;
 }
