--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -104,3 +104,11 @@ a:visited {
   font-family: 'Princess Sofia', cursive;
   font-size: 24px;
 }
+
+.show-size {
+  height: 400px;
+}
+
+.tile-size {
+  height: 300px;
+}
