profile photos show now

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,7 +55,7 @@ a:visited {
 }
 
 .top-bar {
-  font-size: 18px;
+  font-size: 22px;
   background-color: #3C3C3C;
   padding: 25px;
   border-bottom: 2px #FFFFFF solid;
@@ -96,8 +96,12 @@ a:visited {
 }
 
 .button {
-  float: left;
+
   background-color: grey;
+}
+
+.left {
+  margin-left: 0;
 }
 
 .cursive {
@@ -111,4 +115,13 @@ a:visited {
 
 .tile-size {
   height: 250px;
+}
+
+.profile-size {
+  height: 40px;
+  margin: 10px;
+}
+
+.fa {
+  margin: 10px;
 }
