--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -123,5 +123,30 @@ a:visited {
 }
 
 .fa {
-  margin: 10px;
+  margin-right: 15px;
+  margin-bottom: 10px;
+}
+
+.short-field {
+  width: 600px;
+}
+
+.white-text {
+  color: #ffffff;
+  font-size: 20px;
+}
+
+.form-tile {
+  width: 650px;
+  background-color: #3C3C3C;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #FFFFFF;
+  border-radius: 25px;
+  padding: 20px;
+  margin: auto;
+}
+
+.shorter-field {
+  width: 300px;
 }
