--- a/app/views/art_labels/edit.html.erb
+++ b/app/views/art_labels/edit.html.erb
@@ -1,31 +1,34 @@
 <h1>Edit <%= @art_label.name %>!</h1>
+  <div class="container">
+    <%= image_tag(@art_label.label_photo, class: "show-size") %>
+    <%= form_for @art_label do |f| %>
 
-<%= form_for @art_label do |f| %>
+      <%= f.label :name, class: "white-text" %>
+      <%= f.text_field :name, class: "short-field" %><br />
 
-  <%= f.label :name %>
-  <%= f.text_field :name %><br />
+      <%= f.label :label_photo, 'Art Label Photo', class: "white-text" %>
+      <%= f.file_field :label_photo, class: "short-field" %><br />
 
-  <%= f.label :label_photo, 'Art Label Photo' %>
-  <%= f.file_field :label_photo %><br />
+      <%= f.label :brewery, class: "white-text" %>
+      <%= f.text_field :brewery, class: "short-field" %><br />
 
-  <%= f.label :brewery %>
-  <%= f.text_field :brewery %><br />
+      <%= f.label :beer_style, class: "white-text" %>
+      <%= f.text_field :beer_style, class: "short-field" %><br />
 
-  <%= f.label :beer_style %>
-  <%= f.text_field :beer_style %><br />
+      <%= f.label :art_style, class: "white-text" %>
+      <%= f.text_field :art_style, class: "short-field" %><br />
 
-  <%= f.label :art_style %>
-  <%= f.text_field :art_style %><br />
+      <%= f.label :container_type, class: "white-text" %>
+      <%= f.text_field :container_type, class: "short-field" %><br />
 
-  <%= f.label :container_type %>
-  <%= f.text_field :container_type %><br />
+      <%= f.label :beer_description, class: "white-text" %>
+      <%= f.text_field :beer_description, class: "short-field" %><br />
 
-  <%= f.label :beer_description %>
-  <%= f.text_field :beer_description %><br />
+      <%= f.label :art_description, class: "white-text" %>
+      <%= f.text_field :art_description, class: "short-field" %><br />
 
-  <%= f.label :art_description %>
-  <%= f.text_field :art_description %><br />
+      <%= f.submit "Submit Edited #{@art_label.name}", class: "button" %>
 
-  <%= f.submit "Submit Edited #{@art_label.name}" %>
-
-<% end %>
+    <% end %>
+  </div>
+</div>
