--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,81 +1,80 @@
 <h2>Edit <%= resource_name.to_s.humanize %> Profile</h2>
+<div class="container">
+  <%= image_tag(current_user.profile_photo, class: 'show-size') %>
 
-<%= image_tag(current_user.profile_photo, height: "420") %>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+    <div class="field">
+      <%= f.label :profile_photo, 'Profile Photo', class:"white-text" %>
+      <%= f.file_field :profile_photo %>
+    </div>
 
-  <div class "field">
-    <%= f.label :profile_photo, 'Profile Photo' %>
-    <%= f.file_field :profile_photo %>
-  </div>
+    <div class="field">
+      <%= f.label :first_name, 'First Name', class:"white-text" %><br />
+      <%= f.text_field :first_name, autofocus: true %>
+    </div>
 
-  <div class="field">
-    <%= f.label :first_name, 'First Name' %><br />
-    <%= f.text_field :first_name, autofocus: true %>
-  </div>
+    <br />
 
-  <br />
+    <div class="field">
+      <%= f.label :last_name, 'Last Name', class:"white-text" %><br />
+      <%= f.text_field :last_name %>
+    </div>
 
-  <div class="field">
-    <%= f.label :last_name, 'Last Name' %><br />
-    <%= f.text_field :last_name %>
-  </div>
+    <br />
 
-  <br />
+    <div class="field">
+      <%= f.label :username, class:"white-text" %><br />
+      <%= f.text_field :username %>
+    </div>
 
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
-  </div>
+    <br />
 
-  <br />
+    <div class="field">
+      <%= f.label :email, class:"white-text" %><br />
+      <%= f.email_field :email %>
+    </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email %>
-  </div>
+    <br />
 
-  <br />
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <div class="field">
+      <%= f.label :password, class:"white-text" %> <i>(leave blank if you don't want to change it)</i><br />
+      <%= f.password_field :password, autocomplete: "off" %>
+      <% if @minimum_password_length %>
+        <br />
+        <em><%= @minimum_password_length %> characters minimum</em>
+      <% end %>
+    </div>
+
+    <br />
+
+    <div class="field">
+      <%= f.label :password_confirmation, class:"white-text" %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    </div>
+
+    <br /><br />
+
+    <div class="field">
+      <%= f.label :current_password, class:"white-text" %> <i>(we need your current password to confirm your changes)</i><br />
+      <%= f.password_field :current_password, autocomplete: "off" %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Update", class: "button" %>
+    </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
+  <hr />
 
-  <br />
+  <h3>Cancel my account</h3>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+  <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "button" %></p>
 
-  <br /><br />
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<hr />
-
-
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+  <%= link_to "Back", :back %>
+</div>
