--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,53 +1,53 @@
 <h2>Sign up</h2>
 
 <div class="container">
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= devise_error_messages! %>
+  <div class="form-tile">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= devise_error_messages! %>
 
-    <div class "field">
-      <%= f.label :profile_photo, 'Profile Photo' %>
-      <%= image_tag(registration_path(resource_name)) if resource.profile_photo? %>
-      <%= f.file_field :profile_photo %>
-      <%= f.hidden_field :profile_photo_cache %>
-    </div>
+      <div class "field">
+        <%= f.label :profile_photo, 'Profile Photo', class:"white-text" %>
+        <%= image_tag(registration_path(resource_name)) if resource.profile_photo? %>
+        <%= f.file_field :profile_photo, class:"white-text" %>
+        <%= f.hidden_field :profile_photo_cache %>
+      </div>
 
-    <div class="field">
-      <%= f.label :first_name, 'First Name' %>
-      <%= f.text_field :first_name, autofocus: true %>
-    </div>
+      <div class="field">
+        <%= f.label :first_name, 'First Name', class:"white-text" %>
+        <%= f.text_field :first_name, autofocus: true %>
+      </div>
 
-    <div class="field">
-      <%= f.label :last_name, 'Last Name' %>
-      <%= f.text_field :last_name %>
-    </div>
+      <div class="field">
+        <%= f.label :last_name, 'Last Name', class:"white-text" %>
+        <%= f.text_field :last_name %>
+      </div>
 
-    <div class="field">
-      <%= f.label :username %>
-      <%= f.text_field :username %>
-    </div>
+      <div class="field">
+        <%= f.label :username, class:"white-text" %>
+        <%= f.text_field :username %>
+      </div>
 
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email %>
-    </div>
+      <div class="field">
+        <%= f.label :email, class:"white-text" %><br />
+        <%= f.email_field :email %>
+      </div>
 
-    <div class="field">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "off" %>
-    </div>
+      <div class="field">
+        <%= f.label :password, class:"white-text" %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "off" %>
+      </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "off" %>
-    </div>
+      <div class="field">
+        <%= f.label :password_confirmation, class:"white-text" %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      </div>
 
-    <div class="actions">
-      <%= f.submit "Sign Up" %>
-    </div>
-  <% end %>
+      <div class="actions">
+        <%= f.submit "Sign Up", class: "button" %>
+      </div>
+    <% end %>
+  </div>
 </div>
-
-<%= render "devise/shared/links" %>
