--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,7 +20,7 @@ body {
   font-family: 'Forum', cursive;
   font-size: 20px;
   margin: 0 auto;
-  background: #BF6824;
+  background: url(http://oofindustries.net/images/bubbles-beer.jpg);
 }
 
 a,
